# Anomaly-Detection

./: .gitignore  .python-version  README.md  STRUCTURE.md  __init__.py  app.py  app2.py  app3.py  app_improved.py  config.py  evaluation.py  main.py  pyproject.toml  realtime_data_provider.py  requirements.txt
agents/: __init__.py  base_agent.py  crosscheck_agent.py  knowledge_agent.py  manager_agent.py  report_agent.py  web_agent.py
anomaly_detection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: sp500_sample.csv
detection/: __init__.py  anomaly_detector.py  deep_svdd.py  isolation_forest.py
models/: forecasting_pipeline.py  time_series_models.py
used/: app.py
utils/: __init__.py  data_utils.py  llm_clients.py  signal_generator.py
