[project]
name = "anomaly-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"

dependencies = [
    # ── UI / API ──────────────────────────────
    "gradio==5.33.0",
    "gradio-client==1.10.2",
    "orjson>=3.9,<4",
    "pillow>=9.5,<10",

    # ── 科学計算 / ML ────────────────────────
    "numpy>=1.20,<1.24",
    "protobuf<3.20",
    "tensorflow==2.10.1",
    "scipy>=1.10,<1.11",
    "scikit-learn==1.3.2",

    # ── 可視化・ユーティリティ ──────────────
    "plotly>=6.0.1",
    "matplotlib>=3.7.3",
    "kiwisolver==1.4.5",
    "pandas>=1.5,<2",
    "beautifulsoup4>=4.9.0",
    "python-dotenv>=0.19.0",
    "requests>=2.25.0",
    "pydantic>=2",
]

[tool.setuptools]
py-modules = []

[tool.rye]
installer = "pip"
